# zipline

./: .gitignore  .gitmodules  build.gradle.kts  gradle.properties
.github/workflows/: build.yaml  release.yaml
gradle/: libs.versions.toml
samples/trivia/trivia-js/: build.gradle.kts
samples/trivia/trivia-shared/: build.gradle.kts
samples/world-clock/presenters/: build.gradle.kts
zipline/: build.gradle.kts  build.zig
zipline-cryptography/: build.gradle.kts
zipline-cryptography/src/mingwMain/kotlin/app/cash/zipline/cryptography/: RealZiplineCryptographyService.kt
zipline-gradle-plugin/: README.md  build.gradle.kts
zipline-gradle-plugin/src/main/kotlin/app/cash/zipline/gradle/: util.kt
zipline-gradle-plugin/src/test/projects/android/lib/: build.gradle.kts
zipline-gradle-plugin/src/test/projects/basic/lib/: build.gradle.kts
zipline-gradle-plugin/src/test/projects/crash/lib/: build.gradle.kts
zipline-gradle-plugin/src/test/projects/jvmOnly/lib/: build.gradle.kts
zipline-gradle-plugin/src/test/projects/multipleJsTargets/lib/: build.gradle.kts
zipline-gradle-plugin/src/test/projects/no-api-tracking/lib/: build.gradle.kts
zipline-gradle-plugin/src/test/projects/no-runtime/lib/: build.gradle.kts
zipline-gradle-plugin/src/test/projects/signing/lib/: build.gradle.kts
zipline-kotlin-plugin/src/main/kotlin/app/cash/zipline/kotlin/: AdapterGenerator.kt
zipline-loader/: build.gradle.kts
zipline-loader-testing/: build.gradle.kts
zipline-loader/src/_linuxMain/kotlin/app/cash/zipline/loader/internal/: EcdsaP256.kt
zipline-loader/src/_mingwMain/kotlin/app/cash/zipline/loader/internal/: EcdsaP256.kt  internalMingw.kt
zipline-loader/src/commonMain/kotlin/app/cash/zipline/loader/: FreshnessChecker.kt  ZiplineLoader.kt
zipline-loader/src/commonMain/kotlin/app/cash/zipline/loader/internal/: internalCommon.kt
zipline-loader/src/jniMain/kotlin/app/cash/zipline/loader/internal/: internalJni.kt
zipline-loader/src/nativeMain/kotlin/app/cash/zipline/loader/: URLSessionZiplineHttpClient.kt  loaderNative.kt
zipline-loader/src/nativeMain/kotlin/app/cash/zipline/loader/internal/: EcdsaP256.kt
zipline-loader/src/nativeTest/kotlin/app/cash/zipline/loader/: URLSessionZiplineHttpClientTest.kt
zipline-testing/: build.gradle.kts
zipline-testing/src/commonMain/kotlin/app/cash/zipline/testing/: serviceBuilder.kt
zipline-testing/src/jsMain/kotlin/app/cash/zipline/testing/: serviceBuilderJs.kt
zipline/native/: CMakeLists.txt
zipline/native/cmake/: zig-ar.sh  zig-ranlib.sh
zipline/src/androidMain/: CMakeLists.txt
zipline/src/commonMain/kotlin/app/cash/zipline/internal/bridge/: ZiplineServiceAdapter.kt
zipline/src/hostMain/kotlin/app/cash/zipline/: Zipline.kt
zipline/src/hostTest/kotlin/app/cash/zipline/: ServiceBuilderTest.kt  TuningApisTest.kt
zipline/src/jniMain/kotlin/app/cash/zipline/: QuickJs.kt
zipline/src/jvmMain/: CMakeLists.txt
zipline/src/jvmMain/kotlin/app/cash/zipline/: QuickJsNativeLoader.kt
zipline/src/jvmMain/resources/jni/macos/arm64/: libquickjs.dylib
zipline/src/jvmMain/resources/jni/macos/x64/: libquickjs.dylib
zipline/src/nativeMain/kotlin/app/cash/zipline/: QuickJs.kt
